# xqc-twitch-bot

./: Cargo.toml  LICENSE
src/: main.rs
src/discord_connection/: mod.rs
src/twitch_connection/: mod.rs
